--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/authshot.png"  />
+    <link rel="icon" href="%PUBLIC_URL%/logoColor.png"  />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content=""
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/authshot.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoColor.png" />
     <title>Spotify-clone</title>
   </head>
   <body>
